# waterEoS

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  pyproject.toml  railway.toml  render.yaml  requirements-web.txt
.github/workflows/: publish.yml
caupin_eos/: README.md  __init__.py  caupin_eos.py  core.py  core_ad.py  params.py  phase_diagram.py
duska_eos/: README.md  __init__.py  core.py  core_ad.py  duska_eos.py  params.py  phase_diagram.py
examples/: basic_usage.py  compare_models.py  compute_api.py  phase_diagram.py  transport_properties.py  tv_phase_diagram_example.py  two_state_properties.py
grenke_eos/: README.md  __init__.py  core.py  grenke_eos.py  params.py
holten_eos/: README.md  __init__.py  core.py  core_ad.py  holten_eos.py  params.py  phase_diagram.py
scripts/: precompute_phase_diagrams.py
singh_viscosity/: README.md  __init__.py  core.py  params.py  singh_viscosity.py
src/: caupin.rs  duska.rs  holten.rs  lib.rs  phase.rs
tests/: test_backend_crossval.py  test_model_registry.py  test_watereos.py
watereos/: __init__.py  _common.py  cache.py  computation.py  fast_phase_diagram.py  kauzmann.py  model_registry.py  tmd.py  tv_phase_diagram.py  two_state_eos.py  two_state_phase.py  watereos.py
watereos/data/: caupin2019_phase_diagram.json  duska2020_phase_diagram.json  holten2014_phase_diagram.json
watereos_ad/: __init__.py  equilibrium.py  phase_adapter.py  properties.py  tmd_widom.py
watereos_dash/: app.py  style.py
watereos_dash/assets/: style.css
watereos_dash/callbacks/: __init__.py  h2o_phase_diagram.py  model_comparison.py  phase_diagram.py  point_calculator.py  property_explorer.py  settings.py
watereos_dash/layouts/: __init__.py  h2o_phase_diagram.py  info.py  model_comparison.py  phase_diagram.py  point_calculator.py  property_explorer.py  settings.py
watereos_gui/: __init__.py  __main__.py  app.py
watereos_gui/backend/: cache.py  computation.py  workers.py
watereos_gui/tabs/: model_comparison.py  phase_diagram_viewer.py  point_calculator.py  property_explorer.py  settings.py
watereos_gui/utils/: data_export.py  model_registry.py  plot_style.py
watereos_gui/widgets/: export_toolbar.py  model_selector.py  mpl_canvas.py  property_dropdown.py  pt_range_controls.py
watereos_visualizer/: app.py  style.py  units.py
watereos_visualizer/assets/: style.css
watereos_visualizer/callbacks/: __init__.py  h2o_phase_diagram.py  model_comparison.py  phase_diagram.py  point_calculator.py  property_explorer.py  settings.py
watereos_visualizer/layouts/: __init__.py  h2o_phase_diagram.py  info.py  model_comparison.py  phase_diagram.py  point_calculator.py  property_explorer.py  settings.py
