[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "waterEoS"
version = "0.3.0"
description = "Equations of state for supercooled water"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.9"
authors = [{ name = "Anthony Consiglio" }]
keywords = ["water", "equation of state", "supercooled", "thermodynamics", "two-state"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "SeaFreeze>=0.9",
]

[project.urls]
Homepage = "https://github.com/anthony-consiglio/waterEoS"
Issues = "https://github.com/anthony-consiglio/waterEoS/issues"

[tool.setuptools.packages.find]
include = ["watereos*", "duska_eos*", "caupin_eos*", "holten_eos*", "grenke_eos*", "singh_viscosity*"]
exclude = ["tests*", "examples*"]
