[build-system]
requires = ["setuptools>=64", "setuptools-rust>=1.9"]
build-backend = "setuptools.build_meta"

[project]
name = "waterEoS"
version = "0.4.0"
description = "Equations of state for supercooled water"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.9"
authors = [{ name = "Anthony Consiglio" }]
keywords = ["water", "equation of state", "supercooled", "thermodynamics", "two-state"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "SeaFreeze>=0.9",
]

[project.optional-dependencies]
dev = ["jax>=0.4.30", "pytest"]
web = [
    "dash>=2.14",
    "dash-mantine-components>=0.14",
    "plotly>=5.18",
    "gunicorn>=21.2",
]
tv = ["iapws>=0.4"]
rust = ["setuptools-rust>=1.9"]

[project.urls]
Homepage = "https://github.com/anthony-consiglio/waterEoS"
Issues = "https://github.com/anthony-consiglio/waterEoS/issues"

[tool.setuptools.packages.find]
include = ["watereos*", "watereos_ad*", "watereos_visualizer*", "duska_eos*", "caupin_eos*", "holten_eos*", "grenke_eos*", "singh_viscosity*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"watereos_visualizer" = ["assets/**/*"]
"watereos" = ["data/*.json"]

[[tool.setuptools-rust.ext-modules]]
target = "watereos_rs"
binding = "PyO3"
optional = true

[tool.maturin]
python-packages = [
    "watereos", "watereos_ad",
    "caupin_eos", "duska_eos", "holten_eos", "grenke_eos",
    "singh_viscosity",
    "watereos_visualizer",
]
